--- a/index.html
+++ b/index.html
@@ -1,12 +1,292 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
+
 <body>
-  
+  <header>
+    <div class="header-top-wrapper">
+      <div class="header-top max-container">
+        <p>WELCOME TO OUR BORROW LOAN WEBSITE TEMPLATES</p>
+        <div class="header-top-link">
+          <a href="#">VIEW LOCATIONS</a>
+          <a href="tel:+18001234587">+18001234587</a>
+          <a href="#">EMI CALCULATOR</a>
+        </div>
+      </div>
+    </div>
+    <div class="header-main-wrapper">
+      <div class="header-main max-container">
+        <a href="#" id="logo"><img src="assets/logo.png" alt="logo"></a>
+        <nav>
+          <ul class="nav-menu">
+            <li class="nav-item">
+              <div class="dropdown">
+                <a class="dropdown-toggle nav-item-link" href="#" role="button" id="dropdownMenuLink1"
+                  data-bs-toggle="dropdown" aria-expanded="false">
+                  HOME
+                </a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink1">
+                  <a class="dropdown-item" href="#">Some</a>
+                  <a class="dropdown-item" href="#">Main</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+              </div>
+            </li>
+            <li class="nav-item">
+              <div class="dropdown">
+                <a class="dropdown-toggle nav-item-link" href="#" role="button" id="dropdownMenuLink2"
+                  data-bs-toggle="dropdown" aria-expanded="false">
+                  LOAN PRODUCT
+                </a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink2">
+                  <a class="dropdown-item" href="#">Some</a>
+                  <a class="dropdown-item" href="#">Main</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+              </div>
+            </li>
+            <li class="nav-item">
+              <div class="dropdown">
+                <a class="dropdown-toggle nav-item-link" href="#" role="button" id="dropdownMenuLink3"
+                  data-bs-toggle="dropdown" aria-expanded="false">
+                  ABOUT US
+                </a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink3">
+                  <a class="dropdown-item" href="#">Some</a>
+                  <a class="dropdown-item" href="#">Main</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+              </div>
+            </li>
+            <li class="nav-item">
+              <div class="dropdown">
+                <a class="dropdown-toggle nav-item-link" href="#" role="button" id="dropdownMenuLink4"
+                  data-bs-toggle="dropdown" aria-expanded="false">
+                  BLOG
+                </a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink4">
+                  <a class="dropdown-item" href="#">Some</a>
+                  <a class="dropdown-item" href="#">Main</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+              </div>
+            </li>
+            <li class="nav-item">
+              <div class="dropdown">
+                <a class="dropdown-toggle nav-item-link" href="#" role="button" id="dropdownMenuLink5"
+                  data-bs-toggle="dropdown" aria-expanded="false">
+                  FEATURES
+                </a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink5">
+                  <a class="dropdown-item" href="#">Some</a>
+                  <a class="dropdown-item" href="#">Main</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+              </div>
+            </li>
+            <li class="nav-item">
+              <div class="dropdown">
+                <a class="dropdown-toggle nav-item-link" href="#" role="button" id="dropdownMenuLink6"
+                  data-bs-toggle="dropdown" aria-expanded="false">
+                  BANK ACCOUNT
+                </a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink6">
+                  <a class="dropdown-item" href="#">Some</a>
+                  <a class="dropdown-item" href="#">Main</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+              </div>
+            </li>
+          </ul>
+          <a id="search-icon" href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+        </nav>
+        <div class="hamburger">
+          <span><i id="ham-icon" class="fa fa-bars"></i></span>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <main>
+
+    <section class="banner">
+      <section class="banner-text max-container">
+        <h1>
+          We help millions of people find the right credit card.
+        </h1>
+        <p>
+          Choose a category to narrow your search and find the card that's right for you
+        </p>
+        <div class="banner-cards">
+          <div class="banner-card">
+            <i class="fa-solid fa-gift"></i>
+            <span>0% APR</span>
+          </div>
+          <div class="banner-card">
+            <i class="fa-solid fa-gift"></i>
+            <span>Balance Transfer</span>
+          </div>
+          <div class="banner-card">
+            <i class="fa-solid fa-gift"></i>
+            <span>Travel</span>
+          </div>
+          <div class="banner-card">
+            <i class="fa-solid fa-gift"></i>
+            <span>Cash Back</span>
+          </div>
+          <div class="banner-card">
+            <i class="fa-solid fa-briefcase"></i>
+            <span>Business</span>
+          </div>
+          <div class="banner-card">
+            <i class="fa-solid fa-gift"></i>
+            <span>Sign-Up Bonus</span>
+          </div>
+          <div class="banner-card">
+            <i class="fa-solid fa-gift"></i>
+            <span>Travel</span>
+          </div>
+          <div class="banner-card">
+            <i class="fa-solid fa-gift"></i>
+            <span>No annual fee</span>
+          </div>
+        </div>
+      </section>
+    </section>
+
+
+    <div class="card-section">
+      <h3>Can't find your card category?</h3>
+      <p>Search the best card for your credit card instead.</p>
+    </div>
+    <div class="cards">
+      <div class="card">
+        <p>Credit Score: <strong class="pink">Excellent</strong></p>
+        <strong class="range">740-850</strong>
+        <small>credit range</small>
+        <a href="#">see all cards</a>
+      </div>
+      <div class="card">
+        <p>Credit Score: <strong class="orange">Good</strong></p>
+        <strong class="range">670-739</strong>
+        <small>credit range</small>
+        <a href="#">see all cards</a>
+      </div>
+      <div class="card">
+        <p>Credit Score: <strong class="cyan">Fair</strong></p>
+        <strong class="range">580-669</strong>
+        <small>credit range</small>
+        <a href="#">see all cards</a>
+      </div>
+      <div class="card">
+        <p>Credit Score: <strong class="balck">Need Work</strong></p>
+        <strong class="range">300-579</strong>
+        <small>credit range</small>
+        <a href="#">see all cards</a>
+      </div>
+      <div class="card">
+        <p>Credit Score: <strong class="red">Credit Score</strong></p>
+        <strong class="range">Limited/No Credit</strong>
+        <small>credit range</small>
+        <a href="#">see all cards</a>
+      </div>
+    </div>
+
+    <section class="about container">
+      <div>
+        <h3>About Borrow Credit Card</h3>
+        <h2>Makes it easier for all people to achieve their credit goals</h2>
+        <p>If you're looking for credit card news, guides, and comparison tools, you're in the right place. We're the
+          leading online platform for credit cards.</p>
+        <a href="/learn">Learn More</a>
+      </div>
+      <img src="./assets/credit-img.jpg" alt="A women interacting with other one about credit">
+    </section>
+  </main>
+  <footer>
+    <div class="footer-section-wrapper">
+
+      <div class="newsletter mb-5">
+        <img src="./assets/ft-logo.png" alt="footer logo">
+        <h2>Signup Our Newsletter</h2>
+        <div class="input-group w-25">
+          <input type="email" class="form-control" id="email" placeholder="Write E-mail Address">
+          <div class="input-group-append">
+            <button class="btn newsletter-btn px-3">GO!</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="mt-5 footer-links">
+        <div class="company-desc footer-links-section">
+          <div class="text mb-4">Our goal at Borrow Loan company is to provide access to personal loans and education
+            loan,
+            car loan, home loan at insight competitive interest rates lorem ipsums. We are the loan provider, you can
+            use our loan product.
+          </div>
+          <address class="address">
+            <div>
+              <i class="fa-solid fa-location-dot"></i>3895, sycamore road <br>
+              arlingten, 97812
+            </div>
+            <div><i class="fa-solid fa-phone"></i> 800-123-456</div>
+          </address>
+        </div>
+
+        <div class="footer-links-section">
+          <ul>
+            <li><i class="fa-solid fa-greater-than"></i><a href="#">Home</a></li>
+            <li><i class="fa-solid fa-greater-than"></i><a href="#">Services</a></li>
+            <li><i class="fa-solid fa-greater-than"></i><a href="#">About us</a></li>
+            <li><i class="fa-solid fa-greater-than"></i><a href="#">News</a></li>
+            <li><i class="fa-solid fa-greater-than"></i><a href="#">Faq</a></li>
+            <li><i class="fa-solid fa-greater-than"></i><a href="#">Contact Us</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-links-section">
+          <ul>
+            <li><i class="fa-solid fa-greater-than"></i><a href="#">Car Loan</a></li>
+            <li><i class="fa-solid fa-greater-than"></i><a href="#">Personal Loan</a></li>
+            <li><i class="fa-solid fa-greater-than"></i><a href="#">Education Loan</a></li>
+            <li><i class="fa-solid fa-greater-than"></i><a href="#">Business Loan</a></li>
+            <li><i class="fa-solid fa-greater-than"></i><a href="#">Home Loan</a></li>
+            <li><i class="fa-solid fa-greater-than"></i><a href="#">Debt Consolidation</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-links-section icons">
+          <ul>
+            <li><a href="#"><i class="fa-brands fa-facebook"></i> FACEBOOK </a></li>
+            <li><a href="#"><i class="fa-brands fa-google"></i> GOOGLE</a></li>
+            <li><a href="#"><i class="fa-brands fa-twitter"></i> TWITTER</a></li>
+            <li><a href="#"><i class="fa-brands fa-linkedin"></i> LINKEDIN</a></li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+    <div class="copyright-wrapper">
+      <div class="copyright">
+        <small>copyright 2023 | Borrow loan Company</small>
+        <small><a href="#">Terms of use | Privacy Policy</a></small>
+      </div>
+    </div>
+  </footer>
+  <script src="index.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
